Fixed dark mode paragraphs

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,14 +74,20 @@ a:hover {
 }
 
 p {
-    background-color: #e1d4bb;
     text-indent: 20px;
     text-align: center;
     padding: 20px;
     margin: 50px auto;
     max-width: 1000px;
+    background-color: #e1d4bb;
+    border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
 }
 
+/* p:not(.dark-mode) {
+    background-color: #e1d4bb;
+} */
 
 /* animation */
 .animation {
@@ -157,6 +163,7 @@ p {
     place-content: center;
     gap: 1rem;
     text-align: center;
+    margin-left: 7px;
   }
 
 .toggle-switch {
@@ -214,5 +221,8 @@ p {
     background-color: #333;
     color: #f0f0f0;
     transition: all 0.4s ease-in;
+  }
 
+  .dark-mode p {
+    background-color: inherit;
   }
